fix appointment card flicker and popover height

--- a/src/app/shared/components/dfm-calendar/dfm-calendar-week-view/dfm-calendar-week-view.component.scss
+++ b/src/app/shared/components/dfm-calendar/dfm-calendar-week-view/dfm-calendar-week-view.component.scss
@@ -297,7 +297,7 @@ h3 {
 			display: flex;
 			flex-direction: column;
 			overflow-y: auto;
-			max-height: 40vh;
+			max-height: 50vh;
 
 			&::-webkit-scrollbar {
 				width: 12px;
@@ -371,8 +371,6 @@ h3 {
 			z-index: 2;
 			box-shadow: 0 0.125rem 1.25rem rgb(30 30 28 / 10%);
 			transform: scale(1.1);
-			width: calc(140px);
-			max-width: 140px !important;
 		}
 
 		.calendar-week-view-event-title {
@@ -465,7 +463,7 @@ h3 {
 }
 
 .accordion-content {
-	max-height: calc(90vh - 72px);
+	max-height: 50vh;
 	overflow: auto;
 }
 
